--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
  .top-line {
    width: 100%;
-   margin-top: 40px;
+   margin-top: 50px;
    height: 2px; 
    background-color: #000; 
    position: fixed;
@@ -22,4 +22,18 @@
    width: 100%;
    margin-top: 40px;
    position: fixed;
+   background-color: azure;
+ }
+ .top-text {
+   position: fixed;
+   top: 24px;
+   margin-left: 10px;
+   width: 100%;
+   text-align: left;
+   font-weight:bold;
+   line-height: 2px; 
+   color: white; 
+   font-family: Arial, sans-serif; 
+   font-size: 16px; 
+   z-index: 1; 
  }
